--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -1,10 +1,3 @@
-/* 
-
-TemplateMo - Finance Business
-
-https://templatemo.com/tm-545-finance-business
-
-*/
 
 body {
   font-family: 'Poppins', sans-serif;
@@ -700,7 +693,7 @@ ul.slick-dots {
 }
 
 .testimonials {
-	margin-top: 140px;
+	margin-top: 10px;
 	background-color: #f7f7f7;
 	padding: 140px 0px;
 }
@@ -869,7 +862,7 @@ ul.slick-dots {
 }
 
 .partners {
-	margin-top: 140px;
+	margin-top: 20px;
 	background-color: #f7f7f7;
 	padding: 60px 0px;
 }
@@ -890,7 +883,7 @@ ul.slick-dots {
 
 footer {
 	background-color: #232323;
-	padding: 80px 0px;
+	padding: 50px 0px;
 	color: #fff;
 }
 
@@ -899,7 +892,7 @@ footer h4 {
 	font-size: 20px;
 	font-weight: 600;
 	letter-spacing: 0.25px;
-	margin-bottom: 35px;
+	margin-bottom: 5px;
 }
 footer p {
 	color: #fff;
@@ -935,7 +928,7 @@ footer ul.social-icons li a:hover {
 }
 
 footer ul.menu-list li {
-	margin-bottom: 13px;
+	margin-bottom: 3px;
 }
 
 footer ul.menu-list li:last-child {
@@ -952,20 +945,6 @@ footer ul.menu-list li a:hover {
 	color: #a4c639;
 }
 
-footer .contact-form input {
-	border-radius: 20px;
-	height: 40px;
-	line-height: 40px;
-	display: inline-block;
-	padding: 0px 15px;
-	color: #aaa!important;
-	background-color: #343434;
-	font-size: 13px;
-	text-transform: none;
-	box-shadow: none;
-	border: none;
-	margin-bottom: 15px;
-}
 
 footer .contact-form input:focus {
 	outline: none;
@@ -974,21 +953,6 @@ footer .contact-form input:focus {
 	background-color: #343434;
 }
 
-footer .contact-form textarea {
-	border-radius: 20px;
-	height: 120px;
-	max-height: 200px;
-	min-height: 120px;
-	display: inline-block;
-	padding: 15px;
-	color: #aaa!important;
-	background-color: #343434;
-	font-size: 13px;
-	text-transform: none;
-	box-shadow: none;
-	border: none;
-	margin-bottom: 15px;
-}
 
 footer .contact-form textarea:focus {
 	outline: none;
@@ -1037,7 +1001,7 @@ footer .contact-form button.filled-button:hover {
 .sub-footer {
 	background-color: #343434;
 	text-align: center;
-	padding: 25px 0px;
+	padding: 15px 0px;
 }
 
 .sub-footer p {
@@ -1337,3 +1301,10 @@ footer .contact-form button.filled-button:hover {
 		border-bottom: none!important;
 	}
 }
+
+@media (max-width: 768px) {
+	.text-content {
+	  margin-top: 26px;
+	}
+  }
+  
