--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -21,12 +21,14 @@ ul {
 	list-style: none;
 }
 
-h1,h2,h3,h4,h5,h6 {
-	margin: 0px;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0px;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); /* Sombra moderna */
 }
 
+
 a.filled-button {
-	background-color: #a4c639;
+	background-color: #4ac008;
 	color: #fff;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -39,7 +41,7 @@ a.filled-button {
 
 a.filled-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 a.border-button {
@@ -57,7 +59,7 @@ a.border-button {
 
 a.border-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 .section-heading {
@@ -73,7 +75,7 @@ a.border-button:hover {
 
 .section-heading em {
 	font-style: normal;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 .section-heading span {
@@ -87,7 +89,7 @@ a.border-button:hover {
 
 #preloader {
   overflow: hidden;
-  background: #a4c639;
+  background: #4ac008;
   left: 0;
   right: 0;
   top: 0;
@@ -167,7 +169,7 @@ a.border-button:hover {
 /* Sub Header Style */
 
 .sub-header {
-	background-color: #a4c639;
+	background-color: #4ac008;
 	height: 46px;
 	line-height: 46px;
 }
@@ -248,7 +250,7 @@ header .navbar {
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
 }
 .background-header .navbar-brand h2 {
-	color: #a4c639!important;
+	color: #4ac008!important;
 }
 .background-header .navbar-nav a.nav-link {
 	color: #1e1e1e!important;
@@ -258,7 +260,7 @@ header .navbar {
 .background-header .navbar-nav .nav-link.current,
 .background-header .navbar-nav .nav-link.show,
 .background-header .navbar-nav .show>.nav-link {
-	color: #a4c639!important;
+	color: #4ac008!important;
 }
 .navbar .navbar-brand {
 	float: 	left;
@@ -302,8 +304,8 @@ header .navbar {
 .navbar .navbar-nav .nav-link.current,
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
-	color: #a4c639;
-	border-bottom: 3px solid #a4c639;
+	color: #4ac008;
+	border-bottom: 3px solid #4ac008;
 }
 .navbar .navbar-toggler-icon {
 	background-image: none;
@@ -320,7 +322,7 @@ header .navbar {
 }
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
-	color: #a4c639;
+	color: #4ac008;
 	font-size: 18px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
@@ -448,7 +450,7 @@ ul.slick-dots {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
-  color:#a4c639;
+  color:#feae0e;
   animation:fadeOutRight 1s both;
 }
 
@@ -515,7 +517,7 @@ ul.slick-dots {
 /* Request Form */
 
 .request-form {
-	background-color: #a4c639;
+	background-color: #4ac008;
 	padding: 40px 0px;
 	color: #fff;
 }
@@ -599,7 +601,7 @@ ul.slick-dots {
 
 .fun-facts em {
 	font-style: normal;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 .fun-facts p {
@@ -620,7 +622,7 @@ ul.slick-dots {
 
 .count-digit {
     margin: 5px 0px;
-    color: #a4c639;
+    color: #4ac008;
     font-weight: 700;
     font-size: 36px;
 }
@@ -678,7 +680,7 @@ ul.slick-dots {
 
 .more-info .right-content em {
 	font-style: normal;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 .more-info .right-content p {
@@ -719,7 +721,7 @@ ul.slick-dots {
 	margin-top: 8px;
 	font-weight: 600;
 	font-size: 14px;
-	color: #a4c639;
+	color: #4ac008;
 }
 .testimonial-item img {
 	max-width: 60px;
@@ -752,7 +754,7 @@ ul.slick-dots {
 }
 
 .callback-form .contact-form {
-	background-color: #a4c639;
+	background-color: #4ac008;
 	padding: 60px;
 	border-radius: 5px;
 	text-align: center;
@@ -828,11 +830,11 @@ ul.slick-dots {
 
 .callback-form .contact-form button.border-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 .contact-us .contact-form button.filled-button {
-	background-color: #a4c639;
+	background-color: #4ac008;
 	color: #fff;
 	border: none;
 	font-size: 13px;
@@ -850,7 +852,7 @@ ul.slick-dots {
 
 .contact-us .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 
@@ -924,7 +926,7 @@ footer ul.social-icons li a {
 }
 
 footer ul.social-icons li a:hover {
-	background-color: #a4c639;
+	background-color: #4ac008;
 }
 
 footer ul.menu-list li {
@@ -942,7 +944,7 @@ footer ul.menu-list li a {
 }
 
 footer ul.menu-list li a:hover {
-	color: #a4c639;
+	color: #4ac008;
 }
 
 
@@ -974,7 +976,7 @@ footer .contact-form ::placeholder {
 footer .contact-form button.filled-button {
 	background-color: transparent;
 	color: #fff;
-	background-color: #a4c639;
+	background-color: #4ac008;
 	border: none;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -991,7 +993,7 @@ footer .contact-form button.filled-button {
 
 footer .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #4ac008;
 }
 
 
@@ -1069,7 +1071,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .team-item .down-content span {
-	color: #a4c639;
+	color: #4ac008;
 	font-weight: 600;
 	font-size: 14px;
 	display: block;
@@ -1104,7 +1106,7 @@ footer .contact-form button.filled-button:hover {
 	width: 100%;
 	padding: 30px 30px;
 	display: inline-block;
-	background-color: #a4c639;
+	background-color: #4ac008;
   	font-size: 20px;
   	color: #121212;
   	letter-spacing: 0.5px;
@@ -1165,7 +1167,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .contact-information .contact-item i {
-	color: #a4c639;
+	color: #4ac008;
 	font-size: 48px;
 	margin-bottom: 40px;
 }
@@ -1183,7 +1185,7 @@ footer .contact-form button.filled-button:hover {
 
 .contact-information .contact-item a {
 	font-weight: 600;
-	color: #a4c639;
+	color: #4ac008;
 	font-size: 15px;
 }
 
@@ -1297,7 +1299,7 @@ footer .contact-form button.filled-button:hover {
 	.navbar .navbar-nav .nav-link.current,
 	.navbar .navbar-nav .nav-link.show,
 	.navbar .navbar-nav .show>.nav-link {
-		color: #a4c639!important;
+		color: #4ac008!important;
 		border-bottom: none!important;
 	}
 }
@@ -1308,3 +1310,14 @@ footer .contact-form button.filled-button:hover {
 	}
   }
   
+  @media (max-width: 767px) {
+    .footer-item {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .social-icons {
+        justify-content: center;
+        display: flex;
+    }
+}
