--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -575,7 +575,7 @@ ul.slick-dots {
 
 .fun-facts {
 	margin-top: 140px;
-	background-image: url(../images/fun-facts-bg.jpg);
+	background-image: url(../images/sobre/fun-facts-bg.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -700,11 +700,12 @@ ul.slick-dots {
 	padding: 140px 0px;
 }
 .testimonial-item .inner-content {
-	text-align: center;
-	background-color: #fff;	
-	padding: 30px;
-	border-radius: 5px;
-}
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+  }
+  
 .testimonial-item p {
 	font-size: 14px;
 	font-weight: 400;
@@ -717,18 +718,36 @@ ul.slick-dots {
 	margin-bottom: 0px;
 }
 .testimonial-item span {
-	display: inline-block;
+	display: inline-block; /* Garante que o span respeite alinhamentos */
 	margin-top: 8px;
 	font-weight: 600;
 	font-size: 14px;
 	color: #4ac008;
-}
+	text-align: center; /* Alinha o texto no centro da linha */
+	vertical-align: middle; /* Alinha verticalmente na linha */
+  }
+  
 .testimonial-item img {
 	max-width: 60px;
 	border-radius: 50%;
 	margin: 25px auto 0px auto;
 }
 
+.testimonial-icon {
+	background-color: #f1c40f;  /* Cor de fundo do círculo */
+	color: #fff;  /* Cor da letra */
+	font-size: 35px;  /* Tamanho da letra maior */
+	width: 60px;  /* Largura do círculo */
+	height: 60px;  /* Altura do círculo */
+	font-weight: bold;  /* Peso da fonte */
+	border: 2px solid #e67e22;  /* Borda ao redor do círculo */
+	margin-top: 20px;  /* Espaçamento entre o texto e o ícone */
+	display: flex;  /* Tornar o ícone flexível */
+	justify-content: center;  /* Centralizar horizontalmente */
+	align-items: center;  /* Centralizar verticalmente */
+  }
+  
+  
 
 
 
@@ -1019,7 +1038,7 @@ footer .contact-form button.filled-button:hover {
 
 .page-heading {
 	text-align: center;
-	background-image: url(../images/page-heading-bg.jpg);
+	background-image: url(../images/sobre/imagem-head.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -1321,3 +1340,47 @@ footer .contact-form button.filled-button:hover {
         display: flex;
     }
 }
+
+.gallery-img {
+    width: 100%;
+    height: 200px; /* Altura fixa */
+    object-fit: cover; /* Preenche mantendo o aspecto */
+    cursor: pointer;
+  }
+
+  /* Estilização do modal */
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  .modal-content {
+    position: relative;
+    max-width: 90%;
+    max-height: 90%;
+  }
+
+  .modal-content img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+  }
+
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 1001;
+  }
