--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -1062,44 +1062,82 @@ footer .contact-form button.filled-button:hover {
 	display: block;
 }
 
-
 /* team */
-
 .team {
 	background-color: #f7f7f7;
 	margin-top: 140px;
 	margin-bottom: -140px;
 	padding: 120px 0px;
-}
-
-.team-item img {
+  }
+  
+  .team-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+  }
+  
+  .team-item img {
 	width: 100%;
-	overflow: hidden;
-}
-
-.team-item .down-content {
+	max-width: 300px;
+	height: auto;
+	margin-bottom: 20px;
+	border-radius: 0; /* Remove bordas arredondadas para manter a imagem quadrada */
+	object-fit: cover;
+  }
+  
+  .down-content {
 	background-color: #fff;
 	padding: 30px;
-}
-
-.team-item .down-content h4 {
-	font-size: 20px;
+	width: 100%;
+	max-width: 800px;
+	text-align: left;
+	border-radius: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .down-content h4 {
+	font-size: 24px;
 	font-weight: 700;
-	letter-spacing: 0.25px;
+	letter-spacing: 0.5px;
 	margin-bottom: 10px;
-}
-
-.team-item .down-content span {
+	color: #333;
+  }
+  
+  .down-content span {
 	color: #4ac008;
 	font-weight: 600;
-	font-size: 14px;
+	font-size: 18px;
 	display: block;
 	margin-bottom: 15px;
-}
-
-.team-item .down-content p {
+  }
+  
+  .down-content p {
+	font-size: 18px;
+	color: #666;
 	margin-bottom: 20px;
-}
+	line-height: 1.6;
+  }
+  
+  @media (max-width: 768px) {
+	.team-item img {
+	  max-width: 200px;
+	}
+  
+	.down-content {
+	  width: 90%;
+	  padding: 20px;
+	}
+  
+	.down-content h4 {
+	  font-size: 20px;
+	}
+  
+	.down-content p {
+	  font-size: 16px;
+	}
+  }
+  
+
 
 
 /* Single Service */
@@ -1355,7 +1393,7 @@ footer .contact-form button.filled-button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(35, 35, 35, 0.283);
     display: flex;
     justify-content: center;
     align-items: center;
